// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render header with one button 1`] = `
<header
  className="theme-tc-enumeration-header tc-enumeration-header"
>
  <span>
    Values
  </span>
  <div
    className="actions"
  >
    <button
      aria-label="Add item"
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="theme-tc-svg-icon tc-svg-icon"
        focusable="false"
        name="talend-plus"
        title={null}
      >
        <use
          xlinkHref="#talend-plus"
        />
      </svg>
    </button>
  </div>
</header>
`;

exports[`Header should render header with one button and indicate the component is required 1`] = `
<header
  className="theme-tc-enumeration-header tc-enumeration-header"
>
  <span>
    Values
    *
  </span>
  <div
    className="actions"
  >
    <button
      aria-label="Add item"
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="theme-tc-svg-icon tc-svg-icon"
        focusable="false"
        name="talend-plus"
        title={null}
      >
        <use
          xlinkHref="#talend-plus"
        />
      </svg>
    </button>
  </div>
</header>
`;

exports[`Header should render header with one dropdown and two items 1`] = `
<header
  className="theme-tc-enumeration-header tc-enumeration-header"
>
  <span>
    Values
  </span>
  <div
    className="actions"
  >
    <div
      className="dropdown btn-group btn-group-link"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="Add item"
        btooltipPlacement="bottom"
        className="theme-tc-dropdown-button tc-dropdown-button dropdown-toggle btn btn-link"
        data-feature="item.add"
        disabled={false}
        displayMode="dropdown"
        id="add"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="button"
        type="button"
      >
        <svg
          aria-hidden="true"
          className="theme-tc-svg-icon tc-svg-icon"
          focusable="false"
          name="talend-plus"
          title={null}
        >
          <use
            xlinkHref="#talend-plus"
          />
        </svg>
      </button>
      <ul
        aria-labelledby="add"
        className="dropdown-menu dropdown-menu-right"
        role="menu"
      >
        <li
          className="theme-tc-dropdown-item tc-dropdown-item"
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            id="append-uploding"
            label="Add values from a file"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="menuitem"
            tabIndex="-1"
            title="Add values from a file"
          >
            Add values from a file
          </a>
        </li>
        <li
          className="theme-tc-dropdown-item tc-dropdown-item"
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            id="append-uploding"
            label="Overwrite existing values"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="menuitem"
            tabIndex="-1"
            title="Overwrite existing values"
          >
            Overwrite existing values
          </a>
        </li>
      </ul>
    </div>
  </div>
</header>
`;
